# aup_project

./: ARCHITECTURE.md  README.md  SETUP.md  start.sh
aup/: go.mod
aup/cmd/fingerprint-only/: main.go
aup/cmd/protected-app/: main.go
aup/internal/license/: license.go
aup/lib/: license_api.h
client/: ARCHITECTURE.md  CMakeLists.txt
client/.cache/clangd/index/: anti_re.cpp.811DE70FCCD57C63.idx  anti_re.h.D14CFCAE85D04442.idx  app_core.cpp.A0244A5B307FFFB6.idx  app_loader.cpp.EC8FD1BA0ADD9F25.idx  app_loader.h.1B7D178867AD0351.idx  audit_decrypt.cpp.96214DBDAD036B49.idx  encrypt_core.cpp.A585F0B5AB4D28DA.idx  fingerprint.cpp.DA3BA6BCD84F0491.idx  fingerprint.h.954707DFB78AE01F.idx  gui_installer.cpp.F9590C7B62F95972.idx  keygen.cpp.5D67C5F75C14BFFA.idx  license_embed.cpp.2256FCF8E74E2020.idx  license_embed.h.7A0328D3EE0276A5.idx  main.cpp.6C235226F1D8C0EA.idx  secure_logger.cpp.17119C7449257B70.idx  secure_logger.h.26235464959F4018.idx  sign_license.cpp.1B04D1FEAA83BA49.idx  tpm_attest.cpp.66964BFFDF46FF05.idx  tpm_attest.h.61C113FE979FB11D.idx  tpm_seal.cpp.309556A786866298.idx  tpm_seal.h.B88E963F0C56AA45.idx  verifier.cpp.77DFA3D4237B07A1.idx  verifier.h.9564D7B71BDD393E.idx
client/include/: anti_re.h  app_loader.h  fingerprint.h  license_api.h  license_embed.h  secure_logger.h  tpm_attest.h  tpm_seal.h  verifier.h
client/src/: anti_re.cpp  app_core.cpp  app_loader.cpp  fingerprint.cpp  gui_installer.cpp  license_api.cpp  license_embed.cpp  main.cpp  secure_logger.cpp  tpm_attest.cpp  tpm_seal.cpp  verifier.cpp
client/tools/: audit_decrypt.cpp  encrypt_core.cpp  get_fingerprint.cpp  keygen.cpp  sign_license.cpp
